--- a/src/componentes/ScrollCards/ScrollCards.scss
+++ b/src/componentes/ScrollCards/ScrollCards.scss
@@ -1,7 +1,9 @@
 body {
   .body-cards {
+    width: 100%;
     background-color: #398269;
     height: 450px;
+
     .container-cards {
       width: 250px;
       height: 300px;
@@ -33,16 +35,126 @@ body {
           width: 50px;
           height: 40px;
         }
-        .ganado{
-            text-align: center;
-            font-family: Courier-Prime;
-            width: 100px;
-            height: 30px;
-            margin-top: 20px;
-            background-color: #FA9C86;
-            border-radius: 15px;
+        .ganado {
+          text-align: center;
+          font-family: Courier-Prime;
+          width: 100px;
+          height: 30px;
+          margin-top: 20px;
+          background-color: #fa9c86;
+          border-radius: 15px;
           color: black;
           font-size: 15px;
+        }
+      }
+    }
+  }
+  //TABLET
+  @media (min-width: 768px) and (max-width: 991px) {
+    .body-cards {
+      
+      .container-cards{
+        width: 200px;
+        height: 200px;
+        .container-banderas{
+        
+          .ganado{
+            width: 90px;
+            height: 20px;
+            font-size: 10px;
+            p{
+              margin-top: 3px;
+            }
+          }
+        }
+       
+      }
+    }
+  }
+
+  //MOBILE
+  @media (min-width: 575px) and (max-width: 768px) {
+    .body-cards {
+      height: 300px;
+      .container-cards {
+        width: 150px;
+        height: 150px;
+        .bg-imagen {
+          .container-imagen {
+            width: 100px;
+            height: 100px;
+            .img-top {
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+        .container-banderas {
+          height: 100px;
+          .img-banderas {
+            margin-top: 20px;
+            width: 30px;
+            height: 30px;
+          }
+          .icono-mensaje {
+            margin-top: 20px;
+            width: 30px;
+            height: 30px;
+          }
+          .ganado {
+            width: 60px;
+            height: 20px;
+            margin-top: 10px;
+            font-size: 10px;
+            p {
+              margin-top: 3px;
+            }
+          }
+        }
+      }
+    }
+  }
+  @media (min-width: 100px) and (max-width: 575px)    {
+    .body-cards {
+      height: 769px;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+      .container-cards {
+        margin-top: 10px !important;
+        width: 150px;
+        height: 150px;
+        .bg-imagen {
+          .container-imagen {
+            width: 100px;
+            height: 100px;
+            .img-top {
+              width: 100%;
+              height: 100%;
+            }
+          }
+        }
+        .container-banderas {
+          height: 100px;
+          .img-banderas {
+            margin-top: 20px;
+            width: 30px;
+            height: 30px;
+          }
+          .icono-mensaje {
+            margin-top: 20px;
+            width: 30px;
+            height: 30px;
+          }
+          .ganado {
+            width: 70px;
+            height: 20px;
+            margin-top: 10px;
+            font-size: 10px;
+            p {
+              margin-top: 3px;
+            }
+          }
         }
       }
     }
